app/(main-layout)/globals.css
:root {
  --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
}

* {
  box-sizing: border-box;
}

body {
  background-color: #ffffff;
  /* min-height: 100vh; */
  margin: 0;
  font-family: 'Lato', sans-serif;
  /* padding-bottom: 2em;  */
}
main{
  min-height: 80vh;
}
footer { 
  /* position: fixed; */
  bottom: 0;
  width: 100%;
}
.bib-entry{
  background-color: #ddd;
  box-shadow: var(--box-shadow);
  padding: 20px;
  margin: 20px 0;
}
.bib-entry p {
  margin: 5px 0;
}
.bib-entry-label { 
  font-weight: bold;
  color: #333;
}

.holdings-selection-form {
  background-color: #fff;
  box-shadow: var(--box-shadow);
  padding: 20px;
  margin: 20px 0;
}

.navbar.bg-primary .navbar-brand, .navbar.bg-success .navbar-brand,
.navbar.bg-primary .nav-link, .navbar.bg-success .nav-link{ 
  color: #fff;
}

.navbar.bg-primary .nav-link:focus,
.navbar.bg-success .nav-link:focus
{
    outline: 1px auto #fff;
        /* outline-offset: 2px; */

}

.navbar button:focus, 
.navbar.bg-primary button:focus, .navbar.bg-primary button:focus-visible
.navbar.bg-success button:focus, .navbar.bg-success button:focus-visible
{
    outline: 2px auto #fff;
    outline-offset: 2px;
}

.navbar.bg-primary  .nav-link:hover,
.navbar.bg-primary  .navbar-brand:hover,
.navbar.bg-success  .nav-link:hover,
.navbar.bg-success  .navbar-brand:hover
{
  color: #dddddd; /* Slightly darker white for hover state */
  text-decoration: underline;
  
}
.guest button:focus, .guest button:focus-visible {
  outline: 2px solid blue;
  outline-offset: 2px;
}

.rdt_TableCol, .rdt_TableCell {
  font-size: 14px
}

.rdt_TableCol:focus-visible {
  font-weight: bold !important;
  text-decoration: underline;
  color: blue;
  opacity: 1.0 !important;
}

.rdt_TableCell a:not('btn') {
  color: blue !important;
}

/* .sc-lgpSej {} */
/*up and down sorting arrows in react-data-table */

